--- a/yolarkadasim/app/src/main/AndroidManifest.xml
+++ b/yolarkadasim/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <meta-data
-            android:name="---"
-            android:value="---" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAqPKSbG1JNk1zTn8uugWMZoJtXLzLqVxw" />
 
         <activity
             android:name=".IlanDetaySayfasi"
